--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.4.0",
-        "psr/event-dispatcher": "^1.0.0"
+        "php": "^7.4.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
